# ethereum-reorg-detector

./: .gitignore  Cargo.toml  README.md
scripts/: generate_fixtures.rs
src/: blocks_handler.rs  events_handler.rs  lib.rs  main.rs  swap_details.rs  web3_client.rs
tests/: events_handler_test.rs
tests/fixtures/: block_headers.json
tests/fixtures/21904546/: block_headers.json
